syntax = "proto3";

import "google/protobuf/any.proto";
// import "grape/api/annotations.proto";

package grape.api;
option go_package = "grape/api";


message Policy {
  enum Type {
    HealthCheck = 0;
  }
  // option (resource).type = "api.grape.policy";
  Type policy_type = 1;
  google.protobuf.Any policy = 2;
  string name = 3;
}

message HealthCheckPolicy {
  // option (resource).type = "api.grape.health_check_policy";
  string path = 1;
}